--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Shailendra-Prajapati-03.github.com/Explore-the-world",
+  "homepage": "https://Shailendra-Prajapati-03.github.io/Explore-the-world",
   "name": "react_country",
   "private": true,
   "version": "0.0.0",
